--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <ul class="navbar-nav nav ml-auto">
               <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
               <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-              <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+              <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Skills</span></a></li>
               <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
               <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
               <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
@@ -95,7 +95,7 @@
                         <li class="d-flex"><span>Address:</span> <span>Near Balaji Temple Old Town Manora Tq.Manora Dist.Washim
                         State.Maharashtra  India
                     India</span></li>
-                        <li class="d-flex"><span>Zip code:</span> <span>44404</span></li>
+                        <li class="d-flex"><span>Zip code:</span> <span>444404</span></li>
                         <li class="d-flex"><span>Address Current:</span> <span> Mominpura Nagpur 
                     India</span></li>
                         <li class="d-flex"><span>Email:</span> <span>Basitalikr@gmail.com</span></li>
