--- a/index.html
+++ b/index.html
@@ -91,13 +91,12 @@
                     <p><ul class="about-info mt-4 px-md-0 px-2">
                         <li class="d-flex"><span>Name:</span> <span>Basit Ali Khan</span></li>
                         <li class="d-flex"><span>Father Name:</span> <span>Rashed Ali Khan</span></li>
-                        <li class="d-flex"><span>Date of birth:</span> <span>January 01, 1995</span></li>
+                        <li class="d-flex"><span>Age :</span> <span>26</span></li>
                         <li class="d-flex"><span>Address:</span> <span>Near Balaji Temple Old Town Manora Tq.Manora Dist.Washim
                         State.Maharashtra  India
                     India</span></li>
                         <li class="d-flex"><span>Zip code:</span> <span>444404</span></li>
-                        <li class="d-flex"><span>Address Current:</span> <span> Mominpura Nagpur 
-                    India</span></li>
+                        <li class="d-flex"><span>Address Current:</span> <span>Karve Nagar Pune</span></li>
                         <li class="d-flex"><span>Email:</span> <span>Basitalikr@gmail.com</span></li>
                         <li class="d-flex"><span>Phone: </span> <span>+91-8087-7071-4-0</span></li>
                     </ul>
