--- a/index.html
+++ b/index.html
@@ -184,10 +184,10 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">01-01-2020- To Pursuing</span>
+                                <span class="date">10-02-2020- To - 09-08-2020</span>
                                 <h2>Internship</h2>
                                 <span class="position"></span>
-                                <p> I am doing Internship in Helix Web Solution</p>
+                                <p>Helix Web Solution Nagpur (MS)</p>
                             </div>
                         </div>
                          <div id="page-3" class= "page three">
