--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <span class="flaticon-ideas"></span>
                             </div>
                             <div class="text pl-3">
-                                <span class="date">10-02-2020- To - 09-08-2020</span>
+                                <span class="date">10-02-2020- To -09-08-2020</span>
                                 <h2>Internship</h2>
                                 <span class="position"></span>
                                 <p>Helix Web Solution Nagpur (MS)</p>
@@ -254,7 +254,22 @@
                                 <!-- END -->
                               </div>
                             </div>
+<div class="col-lg-4 mb-4">
+                              <div class="bg-white rounded-lg shadow p-4">
+                                <h2 class="h5 font-weight-bold text-center mb-4">PHP</h2>
 
+                                <!-- Progress bar 1 -->
+                                <div class="progress mx-auto" data-value='75'>
+                                  <span class="progress-left">
+                        <span class="progress-bar border-primary"></span>
+                                  </span>
+                                  <span class="progress-right">
+                        <span class="progress-bar border-primary"></span>
+                                  </span>
+                                  <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
+                                    <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
+                                  </div>
+                                </div>
                             <div class="col-lg-4 mb-4">
                               <div class="bg-white rounded-lg shadow p-4">
                                 <h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
