--- a/index.html
+++ b/index.html
@@ -254,25 +254,10 @@
                                 <!-- END -->
                               </div>
                             </div>
-<div class="col-lg-4 mb-4">
-                              <div class="bg-white rounded-lg shadow p-4">
-                                <h2 class="h5 font-weight-bold text-center mb-4">PHP</h2>
-
-                                <!-- Progress bar 1 -->
-                                <div class="progress mx-auto" data-value='75'>
-                                  <span class="progress-left">
-                        <span class="progress-bar border-primary"></span>
-                                  </span>
-                                  <span class="progress-right">
-                        <span class="progress-bar border-primary"></span>
-                                  </span>
-                                  <div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-                                    <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
-                                  </div>
-                                </div>
+                         
                             <div class="col-lg-4 mb-4">
                               <div class="bg-white rounded-lg shadow p-4">
-                                <h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
+                                <h2 class="h5 font-weight-bold text-center mb-4">javascript</h2>
 
                                 <!-- Progress bar 1 -->
                                 <div class="progress mx-auto" data-value='75'>
@@ -301,6 +286,18 @@
                               </div>
                             </div>
                         </div>
+                      <div class="row">
+                            <div class="col-md-6 animate-box">
+                                    <div class="progress-wrap ftco-animate">
+                                        <h3>PHP</h3>
+                                        <div class="progress">
+                                            <div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+                                            aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                                            <span>75%</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                         <div class="row">
                             <div class="col-md-6 animate-box">
                                     <div class="progress-wrap ftco-animate">
